# trado

./: README.md
backend/: .gitignore  .pylintrc  .test.env  README.md  environment.yml  example.env  main.py  pyproject.toml  pytest.ini  start_server.sh
backend/app/: __init__.py
backend/app/cache/: instrument_cache.py
backend/app/configs/: data_saver.yaml  websocket.yaml
backend/app/configs/data_saver/: jsonl_saver.yaml
backend/app/configs/streaming/: kafka.yaml
backend/app/configs/user_verifier/: brevo.yaml
backend/app/configs/websocket_connection/: smartsocket_connection.yaml  uplinksocket_connection.yaml
backend/app/core/: app_state.py  application.py  config.py  mixins.py  singleton.py
backend/app/data_layer/data_models/: credential_model.py  notification_provider_model.py
backend/app/notification/: provider.py
backend/app/schemas/: user_model.py
backend/app/sockets/: connect_to_websockets.py  twisted_socket.py  websocket_server_manager.py  websocket_server_protocol.py
backend/app/utils/: constants.py  date_utils.py  fetch_data.py  file_utils.py  kafka_utils.py  redis_utils.py  startup_utils.py  token_data.py  urls.py
backend/scripts/: setup
backend/tests/: conftest.py  test_instrument_cache.py
backend/tests/core/: test_application.py  test_singleton.py
backend/tests/sockets/: conftest.py  test_connect_to_websockets.py  test_websocket_server_manager.py  test_websocket_server_protocol.py
backend/tests/utils/: test_date_utils.py  test_file_utils.py  test_validators.py
backend/tools/websocket/: websocket_client.py
(+175 files in other folders)
